Allow exec* methods to fail with partial matches.
Currently, PCRE_ERROR_PARTIAL is bundled with other errors, making
ExecPartialSoft and ExecPartialHard useless. The exec* family of
methods now returns a Result, with two possible error cases:
- A partial match occurred.
- Some other error occurred.

This is my first foray into Rust (outside tutorials and toy projects),
so forgive me if anything isn't idiomatic.
I'm happy to fix up the PR as-needed.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Damien Schoof <damien.schoof@gmail.com>
 James Rowe <jroweboy@gmail.com>
 Mikhail Borisov <borisov.mikhail@gmail.com>
 Pascal Hertleif <killercup@gmail.com>
+Matt Kline <matt@bitbashing.io>
